<resources>
    <string name="app_name">HCI</string>
    <string name="Quantity">Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name_edit">Name Edit</string>
    <string name="surname_edit">Surname Edit</string>
    <string name="address_edit">Address Edit</string>
    <string name="email_edit">Email Edit</string>
    <string name="phone_edit">Phone Edit</string>
    <string name="alertTitle">DELETE</string>
    <string name="alertMsg">Do you sure to delete the item?</string>
    <string name="cancel">CANCEL</string>
    <string name="decline">DECLINE</string>
    <string name="delete">DELETE</string>
    <string name="favorite" />
    <string name="send_Btn">Send</string>
    <string name="clear_btn">clear</string>
    <string name="pay_Method">Pay Method</string>
    <string name="hi_my_message">Hi, my message</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="msgTime">12/01/2022 10:55:22</string>
    <string name="serverTime">12/01/2022 10:55:22</string>
    <string name="vendorTime">12/01/2022 10:55:22</string>

</resources>