<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/scrollView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/ic_baseline_home_24"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.033" />

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="200dp"
                android:layout_height="128dp"

                android:background="#BAA9A9"
                android:maxHeight="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_home_24"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView1"
                app:layout_constraintEnd_toEndOf="@+id/scrollView1"
                app:layout_constraintStart_toStartOf="@+id/scrollView1"
                app:layout_constraintTop_toTopOf="@+id/scrollView1" />

            <Button
                android:id="@+id/img_pick_btn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="150"
                android:text="Choose Image"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView1"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_pick_btn">

                <EditText
                    android:id="@+id/nameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:hint="@string/name_edit"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/surnameEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:hint="@string/surname_edit"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/addressEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:hint="@string/address_edit"
                    android:inputType="text" />

                <!--<EditText
                    android:id="@+id/emaiEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:hint="@string/email_edit"
                    android:inputType="text" />-->

                <EditText
                    android:id="@+id/phoneEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:hint="@string/phone_edit"
                    android:imeOptions="actionDone"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:overScrollMode="ifContentScrolls"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <Button
                    android:id="@+id/edit"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Edit"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:cornerRadius="8dp" />

                <Button
                    android:id="@+id/done"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="done"
                    android:textSize="12sp"
                    app:backgroundTint="@color/black" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
