<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    tools:context=".login.SigninFragment">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="722dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="407dp"
            android:layout_height="151dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="175dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground"
                app:tint="@color/purple_700"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="407dp"
            android:layout_height="491dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout0"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <EditText
                    android:id="@+id/emails"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:hint="Email"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout0">

                <EditText
                    android:id="@+id/names"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout2"
                android:layout_width="384dp"
                android:layout_height="61dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

                <EditText
                    android:id="@+id/surnames"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="Surname"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                     />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout3"
                android:layout_width="384dp"
                android:layout_height="61dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <EditText
                    android:id="@+id/passwords"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout4"
                android:layout_width="384dp"
                android:layout_height="61dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <EditText
                    android:id="@+id/password2"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="@string/confirm_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout5"
                android:layout_width="384dp"
                android:layout_height="61dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="Address"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/linearLayout6"
                android:layout_width="384dp"
                android:layout_height="61dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="372dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:hint="Phone"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="403dp"
            android:layout_height="109dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <Button
                android:id="@+id/signins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="true"
                android:text="@string/action_sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone"
                app:layout_constraintVertical_bias="0.2" />

            <Button
                android:id="@+id/logins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Log in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signins"
                app:layout_constraintVertical_bias="0.06" />

            <Button
                android:id="@+id/errorTexts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:clickable="false"
                android:text="Error"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="#FF0303"
                android:textSize="20sp"
                app:backgroundTint="#9C303F9F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>

